deploy/tomcat-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kshevchenko
  labels:
   name: kshevchenko
