deploy/tomcat_dep.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-$LAST_BUILD_NUM
  namespace: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      annotations:
        pod.beta.kubernetes.io/hostname: tomcat$LAST_BUILD_NUM
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: "registry-ci.playpit.by/helloworld-STUDENT_NAME:!!!!!!!!!!!!!!!!!!!!!"
        ports:
        - name: tomcatport
          containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-service-$LAST_BUILD_NUM
  namespace: tomcat
spec:
  selector:
    app: tomcat
  type: LoadBalancer
  ports:
  - name: tomcatsvcport
    port: 8080
    targetPort: tomcatport
